--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,21 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+# The Framework
+smithay = { version = "0.7.0", features = [
+	"backend_drm",
+	"backend_libinput",
+	"renderer_gl",
+	"wayland_frontend",
+] }
+
+# Logging
+tracing = "0.1.44"
+tracing-subscriber = "0.3.22"
+
+# System interaction
+libc = "0.2.180"
+xkbcommon = "0.9.0"
+
+# UI Rendering (Later)
+# femtovg = "0.6"
