--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,21 +4,21 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-# The Framework
+# The core building blocks
 smithay = { version = "0.7.0", features = [
 	"backend_drm",
 	"backend_libinput",
 	"renderer_gl",
 	"wayland_frontend",
+	"xwayland",
 ] }
 
-# Logging
+# The Event Loop
+calloop = "0.14.3"
+
+# Logging (essential for debugging TTY crashes)
 tracing = "0.1.44"
-tracing-subscriber = "0.3.22"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 
-# System interaction
-libc = "0.2.180"
-xkbcommon = "0.9.0"
-
-# UI Rendering (Later)
-# femtovg = "0.6"
+# Low level types
+udev = "0.9.3"
